# P42-assessment

./: Copy_of_Perfection42_AI_assessment.ipynb  Perfection42_AI_assessment.ipynb  README.md
src/: brain.py  neurons.py  pyproject.toml
