[tool.poetry]
name = "src"
version = "0.1.0"
description = "Idle"
authors = ["Your Name <you@example.com>"]
license = "none"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.pylint.'MESSAGES CONTROL']
min-public-methods=0
disable=[
    "missing-docstring",
    "too-many-locals",
    "too-many-nested-blocks",
]
good-names=[
    "x",
    "i",
]

[tool.black]
line-length = 120
[tool.isort]
profile = "black"
line_length = 120
[tool.pylint.'FORMAT']
max-line-length=120

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
